src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

:root {
  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
  font-weight: 400;
  /* color-scheme: light dark; */
  /* color: rgba(255, 255, 255, 0.87); */
  background-color: #f7f7f8;
  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  -webkit-text-size-adjust: 100%;
}

#root {
  min-height: 100vh;
}

a {
  font-weight: 500;
  text-decoration: none;
}

body {
  margin: 0;
  padding: 0;
  font-family: "TTHoves", sans-serif;
}

h1 {
  font-size: 2.6em;
  line-height: 1.1;
}
.ql-bubble .ql-editor h1 {
  font-size: 2em;
  font-weight: 600;
  line-height: normal;
}
.ql-bubble .ql-editor h2 {
  font-size: 1.75em;
  font-weight: 600;
  line-height: normal;
}
.ql-bubble .ql-editor h3 {
  font-size: 1.5em;
  font-weight: 600;
}
.ql-editor strong {
  font-size: 1.125rem;
  font-weight: 600;
  letter-spacing: -0.05rem;
}
.ql-editor .ql-size-small {
  font-size: 1em;
}
@media screen and (max-width: 500px) {
  .ql-editor p {
    font-size: 14px;
  }
  .ql-editor .ql-size-small {
    font-size: 14px;
  }
}

button {
  border-radius: 8px;
  border: 1px solid transparent;
  padding: 0.6em 1.2em;
  font-size: 1em;
  font-weight: 500;
  font-family: inherit;
  background-color: #1a1a1a;
  cursor: pointer;
  transition: border-color 0.25s;
}

button:focus,
button:focus-visible {
  outline: 4px auto -webkit-focus-ring-color;
}

.ql-bubble {
  box-shadow: none !important;
}

.preview-render,
.preview-render .ql-container,
.preview-render .ql-editor {
  padding: 0;
  margin: 0;
}

.banner-image {
  /* width: 300px; */
  /* height: 200px; */
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
  /* object-fit: contain !important; */
}

.font-tthoves {
  font-family: "TTHoves", sans-serif;
}

.font-inter {
  font-family: "Inter", sans-serif;
}

@media (prefers-color-scheme: light) {
  :root {
    color: #213547;
    background-color: #ffffff;
  }

  a:hover {
    color: #747bff;
  }

  button {
    background-color: #f7f7f8;
  }
}

::selection {
  color: #f0f0f0;
  background: #000000dc;
}

/* Add this CSS to your styles.css or equivalent */
@keyframes pingPong {
  0% {
    transform: scale(1);
  }

  50% {
    transform: scale(1.2);
  }

  100% {
    transform: scale(1);
  }
}

.ping-pong {
  animation: pingPong 0.175s ease-in-out;
}

.quill,
.editor {
  /* overflow: hidden; */
  border-radius: 12px;
}

.ql-snow {
  background-color: #fff;
}

.ql-editor {
  gap: 0px;
  background-color: #fff;
  padding: 12px;
}
.no-scrollbar::-webkit-scrollbar {
  display: none;
}

.ql-editor * {
  font-family: "TTHoves", sans-serif;
  color: #1a1a1a;
}

